// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup Display tests should display radio group correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component radio"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="radioList verticalRadioList radioList"
        >
          <label
            class="container size-20 start my-radio verticalRadio"
          >
            <input
              type="radio"
              value="one"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
          <label
            class="container size-20 start my-second-radio verticalRadio"
          >
            <input
              type="radio"
              value="two"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Второй вариант
              </span>
            </span>
          </label>
          <label
            class="container size-20 start verticalRadio"
          >
            <input
              type="radio"
              value="three"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Третий вариант
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component radio"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="radioList verticalRadioList radioList"
      >
        <label
          class="container size-20 start my-radio verticalRadio"
        >
          <input
            type="radio"
            value="one"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
        <label
          class="container size-20 start my-second-radio verticalRadio"
        >
          <input
            type="radio"
            value="two"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Второй вариант
            </span>
          </span>
        </label>
        <label
          class="container size-20 start verticalRadio"
        >
          <input
            type="radio"
            value="three"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Третий вариант
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup Display tests should display radio group with error correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component radio error"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="radioList verticalRadioList radioList"
        >
          <label
            class="container size-20 start my-radio verticalRadio"
          >
            <input
              type="radio"
              value="one"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
          <label
            class="container size-20 start my-second-radio verticalRadio"
          >
            <input
              type="radio"
              value="two"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Второй вариант
              </span>
            </span>
          </label>
          <label
            class="container size-20 start verticalRadio"
          >
            <input
              type="radio"
              value="three"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Третий вариант
              </span>
            </span>
          </label>
        </div>
        <span
          class="sub sub errorMessage"
          role="alert"
        >
          Error
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component radio error"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="radioList verticalRadioList radioList"
      >
        <label
          class="container size-20 start my-radio verticalRadio"
        >
          <input
            type="radio"
            value="one"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
        <label
          class="container size-20 start my-second-radio verticalRadio"
        >
          <input
            type="radio"
            value="two"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Второй вариант
            </span>
          </span>
        </label>
        <label
          class="container size-20 start verticalRadio"
        >
          <input
            type="radio"
            value="three"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Третий вариант
            </span>
          </span>
        </label>
      </div>
      <span
        class="sub sub errorMessage"
        role="alert"
      >
        Error
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup Display tests should display radio group with one child correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component radio"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="radioList verticalRadioList radioList"
        >
          <label
            class="container size-20 start radio-group verticalRadio"
          >
            <input
              type="radio"
              value="one"
            />
            <span
              class="circle"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component radio"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="radioList verticalRadioList radioList"
      >
        <label
          class="container size-20 start radio-group verticalRadio"
        >
          <input
            type="radio"
            value="one"
          />
          <span
            class="circle"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup Display tests should display tag radio group correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component tag"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="radioList verticalRadioList"
        >
          <label
            class="verticalRadio verticalTagLabel"
          >
            <input
              autocomplete="off"
              class="hiddenInput"
              type="radio"
              value="one"
            />
            <button
              class="component component component size-48 size-48 outlined outlined rounded outlined my-tag"
              tabindex="-1"
              type="button"
              value="one"
            >
              <span>
                Первый вариант
              </span>
            </button>
          </label>
          <label
            class="verticalRadio verticalTagLabel"
          >
            <input
              autocomplete="off"
              class="hiddenInput"
              type="radio"
              value="two"
            />
            <button
              class="component component component size-48 size-48 outlined outlined rounded outlined"
              tabindex="-1"
              type="button"
              value="two"
            >
              <span>
                Второй вариант
              </span>
            </button>
          </label>
          <label
            class="verticalRadio verticalTagLabel"
          >
            <input
              autocomplete="off"
              class="hiddenInput"
              type="radio"
              value="three"
            />
            <button
              class="component component component size-48 size-48 outlined outlined rounded outlined"
              tabindex="-1"
              type="button"
              value="three"
            >
              <span>
                Третий вариант
              </span>
            </button>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component tag"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="radioList verticalRadioList"
      >
        <label
          class="verticalRadio verticalTagLabel"
        >
          <input
            autocomplete="off"
            class="hiddenInput"
            type="radio"
            value="one"
          />
          <button
            class="component component component size-48 size-48 outlined outlined rounded outlined my-tag"
            tabindex="-1"
            type="button"
            value="one"
          >
            <span>
              Первый вариант
            </span>
          </button>
        </label>
        <label
          class="verticalRadio verticalTagLabel"
        >
          <input
            autocomplete="off"
            class="hiddenInput"
            type="radio"
            value="two"
          />
          <button
            class="component component component size-48 size-48 outlined outlined rounded outlined"
            tabindex="-1"
            type="button"
            value="two"
          >
            <span>
              Второй вариант
            </span>
          </button>
        </label>
        <label
          class="verticalRadio verticalTagLabel"
        >
          <input
            autocomplete="off"
            class="hiddenInput"
            type="radio"
            value="three"
          />
          <button
            class="component component component size-48 size-48 outlined outlined rounded outlined"
            tabindex="-1"
            type="button"
            value="three"
          >
            <span>
              Третий вариант
            </span>
          </button>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup Display tests should display with children like boolean or string or others react children type correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component radio"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="radioList verticalRadioList radioList"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component radio"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="radioList verticalRadioList radioList"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
